# ExpertMap

./: .env.example  .gitignore  README.md  docker-compose.yml  Кейс 1_Naumen.docx
fastapi/: alembic.ini  pyproject.toml
fastapi/app/: main.py
fastapi/app/api/v1/: auth.py  experts.py  health.py  skills.py  users.py
fastapi/app/core/: config.py
fastapi/app/db/: seed.py
fastapi/app/dependencies/: auth.py
fastapi/app/models/: __init__.py  experience.py  invitation.py  skill.py  user.py
fastapi/app/schemas/: auth.py  experience.py  invitation.py  schemas.py  skill.py  user.py
fastapi/app/services/: auth_service.py  invitation_service.py  search_service.py  skill_service.py  user_service.py
fastapi/migrations/versions/: 1b97b056e583_add_unique_constraint_to_user_skills.py  3d63530b39bb_make_user_name_nullable.py  55a4770dcb38_init.py  6e4c369a6e37_add_hashed_password_to_users.py
