[project]
name = "expertmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.7",
    "fastapi>=0.136.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.44.0",
]
